ingress/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:  
   type: NodePort
   ports:  
   - protocol: TCP  
     port: 80
     nodePort: 31303  
   selector:   
       app: nginx-official
